--- a/main.css
+++ b/main.css
@@ -10,3 +10,10 @@ form{
 	color: white;
 	font-size: 1.3rem;
 }
+.copyToClipboard{
+	margin-left: 20px;
+	height: 1.5rem;
+	border-radius: 4px;
+	background-color: inherit;
+	color: inherit;
+}
